--- a/styles/style.css
+++ b/styles/style.css
@@ -1,47 +1,46 @@
 body {
-    overflow-y: scroll; /* Always show vertical scrollbar */
+    overflow-x: hidden;
 }
 
-.hero {
-	position: relative;
-	width: 100%;
-	height: 100vh;
+/* container for landing screen */
+.hero-container {
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.hero::before {
+/* hero image that takes up the viewport */
+.hero-image {
     content: "";
     position: absolute;
-    top: 0;
     width: 100%;
     height: 100%;
+    top: 0;
+    left: 0;
     background: url(../images/background.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    /* filter: brightness(60%); */
+    filter: brightness(.7);
+    z-index: -1;
+    opacity: .3;
 }
 
-.hero-content {
-    position: relative;
-    /* top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); */
+/* text placed in the center of the hero-container */
+.hero-title {
+    filter: brightness(1);
+    color: var(--bs-body);
     text-align: center;
 }
 
-.hero-title {
-    font-size: 3rem;
-    font-weight: 600;
-    margin-bottom: 0;
-    color: white;
-}
-
-.hero-subtitle {
-    font-size: 2rem;
-    font-weight: 200;
-    margin-top: 1rem;
-    color: white;
+/* Keep the navbar at the very top of the page */
+.navbar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    z-index: 100;
 }
