--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -2,10 +2,16 @@ body {
     overflow-x: hidden;
 }
 
+header {
+    min-height:100vh;
+    width:100vw;
+    position:relative
+}
+
 /* container for landing screen */
 .hero-container {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     object-fit: cover;
     display: flex;
     justify-content: center;
@@ -17,7 +23,7 @@ body {
     content: "";
     position: absolute;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     top: 0;
     left: 0;
     background: url(../images/background.png);
@@ -31,7 +37,6 @@ body {
 
 /* Keep the navbar at the very top of the page */
 .navbar {
-    position: absolute;
     top: 0;
     left: 0;
     width: 100vw;
